force-app/main/default/objects/Assigned_Exam_Junction_Question__c/Assigned_Exam_Junction_Question__c.object-meta.xml
<CustomObject>
    <label>Assigned Exam Junction Question</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Assigned Exam Junction Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Exams Junction Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>