force-app/main/default/objects/Assigned_Exam_Junction_Question__c/fields/Assigned_Exam__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Exam__c</fullName>
    <label>Assigned Exam</label>
    <referenceTo>Assigned_Exam__c</referenceTo>
    <relationshipLabel>Assigned Exams Junction Questions</relationshipLabel>
    <relationshipName>Assigned_Exams_Junction_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>