force-app/main/default/objects/Assigned_Exam_Junction_Question__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>