force-app/main/default/objects/Assigned_Exam_Junction_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Assigned Exams Junction Questions</relationshipLabel>
    <relationshipName>Assigned_Exams_Junction_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>